@@ -306,3 +306,4 @@
 	 files, look relative to the directory Fuse started in, not the
 	 current directory.
 20031029 sdlsound.c: fix memset typo (Marek).
+20031029 timer.c: restore old timers only if they exist in timer_pop().
